@@ -19,9 +19,7 @@ import com.salesforce.apollo.cryptography.DigestAlgorithm;
 import com.salesforce.apollo.delphinius.Oracle;
 import com.salesforce.apollo.delphinius.Oracle.Assertion;
 import com.salesforce.apollo.fireflies.View;
-import com.salesforce.apollo.fireflies.View.Participant;
 import com.salesforce.apollo.fireflies.View.Seed;
-import com.salesforce.apollo.membership.Context;
 import com.salesforce.apollo.membership.ContextImpl;
 import com.salesforce.apollo.membership.stereotomy.ControlledIdentifierMember;
 import com.salesforce.apollo.model.ProcessContainerDomain;
@@ -43,6 +41,7 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -228,14 +227,14 @@ public class FireFliesTrace {
             var listener = new View.ViewLifecycleListener() {
 
                 @Override
-                public void viewChange(Context<Participant> context, Digest viewId,
-                                       List<SelfAddressingIdentifier> joins, List<Digest> leaves) {
-                    if (context.totalCount() == CARDINALITY) {
-                        System.out.printf("Full view: %s members: %s on: %s%n", viewId, context.totalCount(),
+                public void viewChange(Function<SelfAddressingIdentifier, View.Participant> context, Digest viewId,
+                                       int cardinality, List<SelfAddressingIdentifier> joins, List<Digest> leaves) {
+                    if (cardinality == CARDINALITY) {
+                        System.out.printf("Full view: %s members: %s on: %s%n", viewId, cardinality,
                                           d.getMember().getId());
                         countdown.countDown();
                     } else {
-                        System.out.printf("Members joining: %s members: %s on: %s%n", viewId, context.totalCount(),
+                        System.out.printf("Members joining: %s members: %s on: %s%n", viewId, cardinality,
                                           d.getMember().getId());
                     }
                 }
@@ -245,7 +244,9 @@ public class FireFliesTrace {
         // start seed
         final var started = new AtomicReference<>(new CountDownLatch(1));
 
-        domains.get(0).getFoundation().start(() -> started.get().countDown(), gossipDuration, Collections.emptyList());
+        domains.getFirst()
+               .getFoundation()
+               .start(() -> started.get().countDown(), gossipDuration, Collections.emptyList());
         if (!started.get().await(10, TimeUnit.SECONDS)) {
             throw new IllegalStateException("Cannot start up kernel");
         }
